--- a/yaml/pn/ressources.yml
+++ b/yaml/pn/ressources.yml
@@ -1,31 +1,110 @@
 S1:
-  R101: "Initiation aux réseaux informatiques"
-  R102: "Principes et architecture des réseaux"
-  R103: "Réseaux locaux et équipements actifs"
-  R104: "Fondamentaux des systèmes électroniques"
-  R105: "Supports de transmission pour les réseaux locaux"
-  R106: "Architecture des systèmes numériques et informatiques"
-  R107: "Fondamentaux de la programmation"
-  R108: "Bases des systèmes d'exploitation"
-  R109: "Introduction aux technologies Web"
-  R110: "Anglais de communication et initiation au vocabulaire technique"
-  R111: "Expression-Culture-Communication Professionnelles 1"
-  R112: "Projet Personnel et Professionnel"
-  R113: "Mathématiques du signal"
-  R114: "Mathématiques des transmissions"
-  R115: "Gestion de projet"
+  R1.01: "Initiation aux réseaux informatiques"
+  R1.02: "Principes et architecture des réseaux"
+  R1.03: "Réseaux locaux et équipements actifs"
+  R1.04: "Fondamentaux des systèmes électroniques"
+  R1.05: "Supports de transmission pour les réseaux locaux"
+  R1.06: "Architecture des systèmes numériques et informatiques"
+  R1.07: "Fondamentaux de la programmation"
+  R1.08: "Bases des systèmes d'exploitation"
+  R1.09: "Introduction aux technologies Web"
+  R1.10: "Anglais de communication et initiation au vocabulaire technique"
+  R1.11: "Expression-Culture-Communication Professionnelles 1"
+  R1.12: "Projet Personnel et Professionnel"
+  R1.13: "Mathématiques du signal"
+  R1.14: "Mathématiques des transmissions"
+  R1.15: "Gestion de projet"
 S2:
-  R201: "Technologie de l'Internet"
-  R202: "Administration système et fondamentaux de la virtualisation"
-  R203: "Bases des services réseaux"
-  R204: "Initiation à la téléphonie d'entreprise"
-  R205: "Signaux et Systèmes pour les transmissions"
-  R206: "Numérisation de l'information"
-  R207: "Sources de données"
-  R208: "Analyse et traitement de données structurées"
-  R209: "Initiation au développement Web"
-  R210: "Anglais de communication et développement de l'anglais technique"
-  R211: "Expression-Culture-Communication Professionnelles 2"
-  R212: "Projet Personnel et Professionnel"
-  R213: "Mathématiques des systèmes numériques"
-  R214: "Analyse mathématique des signaux"
+  R2.01: "Technologie de l'Internet"
+  R2.02: "Administration système et fondamentaux de la virtualisation"
+  R2.03: "Bases des services réseaux"
+  R2.04: "Initiation à la téléphonie d'entreprise"
+  R2.05: "Signaux et Systèmes pour les transmissions"
+  R2.06: "Numérisation de l'information"
+  R2.07: "Sources de données"
+  R2.08: "Analyse et traitement de données structurées"
+  R2.09: "Initiation au développement Web"
+  R2.10: "Anglais de communication et développement de l'anglais technique"
+  R2.11: "Expression-Culture-Communication Professionnelles 2"
+  R2.12: "Projet Personnel et Professionnel"
+  R2.13: "Mathématiques des systèmes numériques"
+  R2.14: "Analyse mathématique des signaux"
+S3:
+  R3.01: "Réseaux de Campus"
+  R3.02: "Réseaux opérateurs"
+  R3.03: "Services réseaux avancés"
+  R3.04: "Services d'annuaire"
+  R3.05: "Chaînes de transmissions numériques"
+  R3.06: "Fibres optiques et propagation"
+  R3.07: "Réseaux d'accès"
+  R3.08: "Consolidation de la programmation"
+  R3.09: "Programmation événementielle"
+  R3.10: "Gestion d'un système de bases de données"
+  R3.11: "Anglais : le monde du travail"
+  R3.12: "Expression-Culture-Communication professionnelle 3"
+  R3.13: "PPP : Savoir collaborer"
+  R3.14: "Mathématiques : Analyse de Fourier"
+  R3.15: "Gestion de projets"
+  R3.16: "Introduction à l'IoT"
+  R3.17: "Collecte et traitement de données issues de l'IoT"
+  R3.18: "Méthodologie du pentesting"
+  R3.19: "Téléphonie sur IP avancée"
+  R3.20: "Ecosystème Cloud"
+  R3.21: "Virtualisation avancée"
+  R3.22: "Téléphonie sur IP"
+  R3.23: "Relation client"
+S4:
+  R4.01: "Infrastructure de sécurité"
+  R4.02: "Transmissions avancées"
+  R4.03: "Physique des Télécoms"
+  R4.04: "Réseaux cellulaires"
+  R4.05: "Automatisation des tâches d'administration"
+  R4.06: "Anglais professionnel"
+  R4.07: "Expression-Culture-Communication professionnelle 4"
+  R4.08: "PPP : monde de l'entreprise"
+  R4.09: "Réseaux sans fil pour l'IoT : MAC et Routage"
+  R4.10: "Cryptographie"
+  R4.11: "Réseaux sans fil pour l'IoT : couche physique"
+  R4.12: "Sécurité des réseaux LAN"
+  R4.13: "Sécurisation de services réseaux"
+  R4.14: "Outils DevOps"
+  R4.15: "Opérateur de Télécom"
+  R4.16: "Fondamentaux de la conteneurisation"
+  R4.17: "Développement de microservices"
+  R4.18: "Technologies des réseaux et des télécoms"
+  R4.19: "Management des équipes"
+S5:
+  R5.01: "Wifi avancé"
+  R5.02: "Supervision des réseaux"
+  R5.03: "Ingénierie des systèmes télécoms"
+  R5.04: "Cycle de vie d'un projet informatique"
+  R5.05: "Gestion de projets"
+  R5.06: "Expression-Culture-Communication professionnelle 5 : s'insérer dans le monde professionnel"
+  R5.07: "Anglais"
+  R5.08: "PPP"
+  R5.09: "Architectures IoT sécurisées"
+  R5.10: "Conceptions et études des performances des réseaux IoT"
+  R5.11: "Réseaux cellulaires dédiés à l'IoT"
+  R5.12: "Architectures sécurisées"
+  R5.13: "Supervision de la sécurité"
+  R5.14: "Audits de sécurité"
+  R5.15: "Normes, standards et analyse de risques"
+  R5.16: "Services multimédia"
+  R5.17: "Sécurité et QoS pour les réseaux opérateurs"
+  R5.18: "Automatisation et virtualisation des réseaux"
+  R5.19: "Infrastructures conteneurisées"
+  R5.20: "Outils et méthodes du DevOps"
+  R5.21: "Programmer son infrastructure"
+  R5.22: "Cloud privé"
+  R5.23: "Ingénierie financière de projet"
+  R5.24: "Devenir Manager"
+  R5.25: "Déploiement d'une solution technique d'aménagement des infrastructures R&T"
+S6:
+  R6.01: "Anglais : insertion professionnelle 2"
+  R6.02: "Expression-Culture-Communication professionnelle 6"
+  R6.03: "Droit et réglementation en entreprise"
+  R6.04: "Chaines complètes IoT"
+  R6.05: "Réponse à incidents"
+  R6.06: "Veille technologique"
+  R6.07: "Pilotage de solutions Cloud pour l'entreprise"
+  R6.08: "Pilotage et valorisation d'un projet R&T"
