Repasse sur l'export docx -> yaml

--- a/yaml/docx/docx.yml
+++ b/yaml/docx/docx.yml
@@ -14,6 +14,12 @@ S1:
   R1.13: "R113.docx"
   R1.14: "R114.docx"
   R1.15: "R115.docx"
+  SAÉ1.1: "SAE11.docx"
+  SAÉ1.2: "SAE12.docx"
+  SAÉ1.3: "SAE13.docx"
+  SAÉ1.4: "SAE14.docx"
+  SAÉ1.5: "SAE15.docx"
+  SAÉ1.6: "SAE16.docx"
 S2:
   R2.01: "R201.docx"
   R2.02: "R202.docx"
@@ -29,6 +35,11 @@ S2:
   R2.12: "R212.docx"
   R2.13: "R213.docx"
   R2.14: "R214.docx"
+  SAÉ2.1: "SAE21.docx"
+  SAÉ2.2: "SAE22.docx"
+  SAÉ2.3: "SAE23.docx"
+  SAÉ2.4: "SAE24.docx"
+  SAÉ2.5: "SAE25.docx"
 S3:
   R3.01: "R301.docx"
   R3.02: "R302.docx"
@@ -53,6 +64,15 @@ S3:
   R3.21: "R-DevCloud-320.docx"
   R3.22: "R-PilPro-321.docx"
   R3.23: "R-PilPro-322.docx"
+  SAÉ3.1: "SAE31.docx"
+  SAÉ3.2: "SAE32.docx"
+  SAÉ3.3: "SAE33.docx"
+  SAÉ3.4: "SA34.docx"
+  SAÉ3.5: "SAE-IOM-35.docx"
+  SAÉ3.6: "SAE-CYBER-36.docx"
+  SAÉ3.7: "SAE-ROM-37.docx"
+  SAÉ3.8: "SAE-DEVCLOUD-38.docx"
+  SAÉ3.9: "SAE-PILPRO-39.docx"
 S4:
   R4.01: "R401.docx"
   R4.02: "R402.docx"
@@ -73,6 +93,13 @@ S4:
   R4.17: "R-DevCloud-422.docx"
   R4.18: "R-PilPro-424.docx"
   R4.19: "R-PilPro-425.docx"
+  SAÉ4.1: "SAE41.docx"
+  SAÉ4.2: "SAE42.docx"
+  SAÉ4.3: "SAE-IOM-43.docx"
+  SAÉ4.4: "SAE-CYBER-44.docx"
+  SAÉ4.5: "SAE-ROM-45.docx"
+  SAÉ4.6: "SAE-DEVCLOUD-46.docx"
+  SAÉ4.7: "SAE-PILPRO-47.docx"
 S5:
   R5.01: "R501.docx"
   R5.02: "R502.docx"
@@ -99,6 +126,14 @@ S5:
   R5.23: "R-PilPro-523.docx"
   R5.24: "R-PilPro-524.docx"
   R5.25: "R-PilPro-525.docx"
+  SAÉ5.1: "SAE51.docx"
+  SAÉ5.2: "SAE52.docx"
+  SAÉ5.3: "SAE53.docx"
+  SAÉ5.4: "SAE-IOM-53.docx"
+  SAÉ5.5: "SAE-CYBER-54.docx"
+  SAÉ5.6: "SAE-ROM-55.docx"
+  SAÉ5.7: "SAE-DEVCLOUD-56.docx"
+  SAÉ5.8: "SAE-PILPRO-57.docx"
 S6:
   R6.01: "R601.docx"
   R6.02: "R602.docx"
@@ -108,3 +143,10 @@ S6:
   R6.06: "R-ROM-607.docx"
   R6.07: "R-DevCloud-608.docx"
   R6.08: "R-PilPro-609.docx"
+  SAÉ6.1: "SAE61.docx"
+  SAÉ6.2: "SAE62.docx"
+  SAÉ6.3: "SAE-IOM-63.docx"
+  SAÉ6.4: "SAE-CYBER-64.docx"
+  SAÉ6.5: "SAE-ROM-65.docx"
+  SAÉ6.6: "SAE-DEVCLOUD-66.docx"
+  SAÉ6.7: "SAE-PILPRO-67.docx"
