--- a/yaml/pn/ressources.yml
+++ b/yaml/pn/ressources.yml
@@ -30,10 +30,10 @@ S2:
   R2.13: "Mathématiques des systèmes numériques"
   R2.14: "Analyse mathématique des signaux"
 S3:
-  R3.01: "Réseaux de Campus"
+  R3.01: "Réseaux de campus"
   R3.02: "Réseaux opérateurs"
   R3.03: "Services réseaux avancés"
-  R3.04: "Services d'annuaire"
+  R3.04: "Services d'annuaires"
   R3.05: "Chaînes de transmissions numériques"
   R3.06: "Fibres optiques et propagation"
   R3.07: "Réseaux d'accès"
@@ -44,8 +44,8 @@ S3:
   R3.12: "Expression-Culture-Communication professionnelle 3"
   R3.13: "PPP : Savoir collaborer"
   R3.14: "Mathématiques : Analyse de Fourier"
-  R3.15: "Gestion de projets"
-  R3.16: "Introduction à l'IoT"
+  R3.15: "Méthodes de gestion de projet"
+  R3.16: "Introduction à l'Internet des Objets"
   R3.17: "Collecte et traitement de données issues de l'IoT"
   R3.18: "Méthodologie du pentesting"
   R3.19: "Téléphonie sur IP avancée"
