--- a/yaml/pn/saes.yml
+++ b/yaml/pn/saes.yml
@@ -1,51 +1,51 @@
 S1:
-  SAÉ11: "Se sensibiliser à l'hygiène informatique et à la cybersécurité"
-  SAÉ12: "S'initier aux réseaux informatiques"
-  SAÉ13: "Découvrir un dispositif de transmission"
-  SAÉ14: "Se présenter sur Internet"
-  SAÉ15: "Traiter des données"
-  SAÉ16: "Portfolio"
+  SAÉ1.1: "Se sensibiliser à l'hygiène informatique et à la cybersécurité"
+  SAÉ1.2: "S'initier aux réseaux informatiques"
+  SAÉ1.3: "Découvrir un dispositif de transmission"
+  SAÉ1.4: "Se présenter sur Internet"
+  SAÉ1.5: "Traiter des données"
+  SAÉ1.6: "Portfolio"
 S2:
-  SAÉ21: "Construire un réseau informatique pour une petite structure"
-  SAÉ22: "Mesurer et caractériser un signal ou un système"
-  SAÉ23: "Mettre en place une solution informatique pour l'entreprise"
-  SAÉ24: "Projet intégratif"
-  SAÉ25: "Portfolio"
+  SAÉ2.1: "Construire un réseau informatique pour une petite structure"
+  SAÉ2.2: "Mesurer et caractériser un signal ou un système"
+  SAÉ2.3: "Mettre en place une solution informatique pour l'entreprise"
+  SAÉ2.4: "Projet intégratif"
+  SAÉ2.5: "Portfolio"
 S3:
-  SAÉ31: "Concevoir un réseau informatique multi-sites"
-  SAÉ32: "Etude et mise en oeuvre d'un système de transmission"
-  SAÉ33: "Développer des applications communicantes"
-  SAÉ34: "Portfolio"
-  SAÉ35: "Collecter et traiter des données avec des objets connectés"
-  SAÉ36: "Découvrir le pentesting"
-  SAÉ37: "Déployer un service de téléphonie multi-sites"
-  SAÉ38: "Mettre en place une infrastructure virtualisée"
-  SAÉ39: "Mettre en place une solution de téléphone IP selon un besoin client"
+  SAÉ3.1: "Concevoir un réseau informatique multi-sites"
+  SAÉ3.2: "Etude et mise en oeuvre d'un système de transmission"
+  SAÉ3.3: "Développer des applications communicantes"
+  SAÉ3.4: "Portfolio"
+  SAÉ3.5: "Collecter et traiter des données avec des objets connectés"
+  SAÉ3.6: "Découvrir le pentesting"
+  SAÉ3.7: "Déployer un service de téléphonie multi-sites"
+  SAÉ3.8: "Mettre en place une infrastructure virtualisée"
+  SAÉ3.9: "Mettre en place une solution de téléphone IP selon un besoin client"
 S4:
-  SAÉ41: "Portfolio"
-  SAÉ42: "Stage"
-  SAÉ43: "Réseaux et protocoles sans fil dédiés à l'IoT"
-  SAÉ44: "Sécuriser un système d'information"
-  SAÉ45: "Déployer une infrastructure opérateur et de services clients"
-  SAÉ46: "Développer et déployer un microservice dans un environnement virtualisé"
-  SAÉ47: "Etudier les solutions (système, réseau, sécurité) d'un fournisseur"
+  SAÉ4.1: "Portfolio"
+  SAÉ4.2: "Stage"
+  SAÉ4.3: "Réseaux et protocoles sans fil dédiés à l'IoT"
+  SAÉ4.4: "Sécuriser un système d'information"
+  SAÉ4.5: "Déployer une infrastructure opérateur et de services clients"
+  SAÉ4.6: "Développer et déployer un microservice dans un environnement virtualisé"
+  SAÉ4.7: "Etudier les solutions (système, réseau, sécurité) d'un fournisseur"
 S5:
-  SAÉ51: "Concevoir, réaliser et présenter une solution technique"
-  SAÉ52: "Portfolio"
-  SAÉ53: "Piloter un projet informatique"
-  SAÉ54: "Performance des architectures de réseaux hybrides dédiées à l'IoT"
-  SAÉ55: "Sécurisation avancée et supervision d'un système d'information"
-  SAÉ56: "Déploiement de services multimédia et/ou opérateur virtualisés et automatisés"
-  SAÉ57: "Conteneurisation et orchestration d'une applicaton"
-  SAÉ58: "Déploiement d'une solution tehcnique d'aménagement des infrastructures R&T"
+  SAÉ5.1: "Concevoir, réaliser et présenter une solution technique"
+  SAÉ5.2: "Portfolio"
+  SAÉ5.3: "Piloter un projet informatique"
+  SAÉ5.4: "Performance des architectures de réseaux hybrides dédiées à l'IoT"
+  SAÉ5.5: "Sécurisation avancée et supervision d'un système d'information"
+  SAÉ5.6: "Déploiement de services multimédia et/ou opérateur virtualisés et automatisés"
+  SAÉ5.7: "Conteneurisation et orchestration d'une applicaton"
+  SAÉ5.8: "Déploiement d'une solution technique d'aménagement des infrastructures R&T"
 S6:
-  SAÉ61: "Portfolio"
-  SAÉ62: "Stage"
-  SAÉ63: "Mise en place d'un réseau IoT en partant d'un cahier des charges"
-  SAÉ64: "Réagir face à une cyber-attaque"
-  SAÉ65: "Défi technologique"
-  SAÉ66: "Pipeline d'une application orientée Cloud"
-  SAÉ67: "Pilotage de projets techniques complexes imbriqués R&T"
+  SAÉ6.1: "Portfolio"
+  SAÉ6.2: "Stage"
+  SAÉ6.3: "Mise en place d'un réseau IoT en partant d'un cahier des charges"
+  SAÉ6.4: "Réagir face à une cyber-attaque"
+  SAÉ6.5: "Défi technologique"
+  SAÉ6.6: "Pipeline d'une application orientée Cloud"
+  SAÉ6.7: "Pilotage de projets techniques complexes imbriqués R&T"
 
 
 
