--- a/yaml/pn/acs.yml
+++ b/yaml/pn/acs.yml
@@ -108,23 +108,23 @@ BUT3:
     AC33.05: "S’informer sur les évolutions et les nouveautés technologiques"
     AC33.06: "Sécuriser l'environnement numérique d'une application"
   IOM1:
-    AC34.01: "Comprendre les architectures, protocoles et services des réseaux mobiles 4G/5G"
-    AC34.02: "Choisir un réseau pour satisfaire les contraintes énergétiques et spectrales, en délai, en débit et en portée des objets connectés"
-    AC34.03: "Mettre en œuvre des réseaux mobiles personnels ou industriels"
+    AC34.01IOM: "Comprendre les architectures, protocoles et services des réseaux mobiles 4G/5G"
+    AC34.02IOM: "Choisir un réseau pour satisfaire les contraintes énergétiques et spectrales, en délai, en débit et en portée des objets connectés"
+    AC34.03IOM: "Mettre en œuvre des réseaux mobiles personnels ou industriels"
   IOM2:
-    AC35.01: "Superviser et analyser le déploiement des réseaux sans-fils"
-    AC35.02: "Sécuriser les objets connectés"
-    AC35.03: "Créer et innover pour l’IoT"
-  CYBER1:
-    AC34.01: "Participer activement à une analyse de risque pour définir une politique de sécurité pour une petite structure"
-    AC34.02: "Mettre en oeuvre des outils avancés de sécurisation d’une infrastructure du réseau"
-    AC34.03: "Sécuriser les systèmes d’exploitation"
-    AC34.04: "Proposer une architecture sécurisée de système d’information pour une petite structure"
-  CYBER2:
-    AC35.01: "Administrer les outils de surveillance du système d’information"
-    AC35.02: "Surveiller l'activité du système d’information"
-    AC35.03: "Appliquer une méthodologie de tests de pénétration"
-    AC35.04: "Réagir face à un incident de sécurité"
+    AC35.01IOM: "Superviser et analyser le déploiement des réseaux sans-fils"
+    AC35.02IOM: "Sécuriser les objets connectés"
+    AC35.03IOM: "Créer et innover pour l’IoT"
+  Cyber1:
+    AC34.01Cyber: "Participer activement à une analyse de risque pour définir une politique de sécurité pour une petite structure"
+    AC34.02Cyber: "Mettre en oeuvre des outils avancés de sécurisation d’une infrastructure du réseau"
+    AC34.03Cyber: "Sécuriser les systèmes d’exploitation"
+    AC34.04Cyber: "Proposer une architecture sécurisée de système d’information pour une petite structure"
+  Cyber2:
+    AC35.01Cyber: "Administrer les outils de surveillance du système d’information"
+    AC35.02Cyber: "Surveiller l'activité du système d’information"
+    AC35.03Cyber: "Appliquer une méthodologie de tests de pénétration"
+    AC35.04Cyber: "Réagir face à un incident de sécurité"
   ROM1:
     AC34.01ROM: "Administrer/superviser les infrastructures et les services télécom"
     AC34.02ROM: "Administrer et déployer des fonctions réseaux virtualisées et programmer le réseau"
@@ -140,14 +140,14 @@ BUT3:
     AC35.03DevCloud: "Gérer son infrastructure comme du code"
     AC35.04DevCloud: "Gérer une chaîne d’intégration et/ou de déploiement continu"
   PilPro1:
-    AC34.01PPR: "Rédaction d'un appel d'offres ou d'un cahier des charges technique R&T"
-    AC34.02PPR: "Animation technique d’équipes pluridisciplinaires"
-    AC34.03PPR: "Coordination d’équipes sur une partie de projet R&T ou sa totalité"
-    AC34.04PPR: "Mise en place de solutions techniques R&T efficientes"
-    AC34.05PPR: "Livraison et suivi technique de projet R&T"
+    AC34.01PilPro: "Rédaction d'un appel d'offres ou d'un cahier des charges technique R&T"
+    AC34.02PilPro: "Animation technique d’équipes pluridisciplinaires"
+    AC34.03PilPro: "Coordination d’équipes sur une partie de projet R&T ou sa totalité"
+    AC34.04PilPro: "Mise en place de solutions techniques R&T efficientes"
+    AC34.05PilPro: "Livraison et suivi technique de projet R&T"
   PilPro2:
-    AC35.01PPR: "Rigueur dans le pilotage d’un projet R&T dans sa globalité"
-    AC35.02PPR: "Flexibilité dans la gestion des équipes et des tâches"
-    AC35.03PPR: "Prise de responsabilité envers les équipes"
-    AC35.04PPR: "Valorisation de solutions déployées, ou d’offres techniques, ou d'offres commerciales"
-    AC35.05PPR: "Force de proposition de solutions R&T innovantes responsables"
+    AC35.01PilPro: "Rigueur dans le pilotage d’un projet R&T dans sa globalité"
+    AC35.02PilPro: "Flexibilité dans la gestion des équipes et des tâches"
+    AC35.03PilPro: "Prise de responsabilité envers les équipes"
+    AC35.04PilPro: "Valorisation de solutions déployées, ou d’offres techniques, ou d'offres commerciales"
+    AC35.05PilPro: "Force de proposition de solutions R&T innovantes responsables"
