Améliore la détection du contexte

--- a/yaml/docx/docx.yml
+++ b/yaml/docx/docx.yml
@@ -121,7 +121,7 @@ S5:
   R5.18: "R-ROM-519.docx"
   R5.19: "R-DevCloud-520.docx"
   R5.20: "R-DevCloud-521.docx"
-  R5.21: "R-DvCloud-522.docx"
+  R5.21: "R-DevCloud-522.docx"
   R5.22: "R-DevCloud-523.docx"
   R5.23: "R-PilPro-523.docx"
   R5.24: "R-PilPro-524.docx"
