--- a/yaml/pn/competences.yml
+++ b/yaml/pn/competences.yml
@@ -5,7 +5,7 @@ DevCloud1: "Coordonner des infrastructures modulaires"
 DevCloud2: "Accompagner le développement d'applications"
 Cyber1: "Administrer un système d'information sécurisé"
 Cyber2: "Surveiller un système d'information sécurisé"
-IOM1: "Gérer les infrastructures des réseaux mobilies"
+IOM1: "Gérer les infrastructures des réseaux mobiles"
 IOM2: "Mettre en œuvre des applications et des protocoles sécurisés pour l'Internet des Objets"
 ROM1: "Gérer les infrastructures et les services des réseaux opérateurs"
 ROM2: "Gérer les communications unifiées et la vidéo sur Internet"
