Améliore détection des codes SAE-Parcours-XX

--- a/yaml/docx/docx.yml
+++ b/yaml/docx/docx.yml
@@ -109,9 +109,9 @@ S5:
   R5.06: "R506.docx"
   R5.07: "R507.docx"
   R5.08: "R508.docx"
-  R5.09: "R-ROM-509.docx"
-  R5.10: "R-ROM-R1.0.docx"
-  R5.11: "R-ROM-511.docx"
+  R5.09: "R-ROM-517.docx"
+  R5.10: "R-ROM-518.docx"
+  R5.11: "R-ROM-519.docx"
   R5.12: "R-CYBER-512.docx"
   R5.13: "R-CYBER-513.docx"
   R5.14: "R-CYBER-514.docx"
@@ -150,3 +150,10 @@ S6:
   SAÉ6.5: "SAE-ROM-65.docx"
   SAÉ6.6: "SAE-DEVCLOUD-66.docx"
   SAÉ6.7: "SAE-PILPRO-67.docx"
+SX:
+  RX01: "RX01.docx"
+  RX02: "RX02.docx"
+  RX03: "RX1.docx"
+  RX04: "RX2.docx"
+  RX05: "RX3.docx"
+  RX06: "RX4.docx"
