--- a/yaml/pn/acs.yml
+++ b/yaml/pn/acs.yml
@@ -77,8 +77,8 @@ BUT2:
     AC25.03DevCloud: "Programmer son réseau par le code"
   PilPro1:
     AC24.01PilPro: "Compréhension d'un cahier des charges technique R&T"
-    AC24.02PilPro: "Planification des étapes d’un projet technique R&T"
-    AC24.03PilPro: "Co-animation d’une équipe technique"
+    AC24.02PilPro: "Planification des étapes d'un projet technique R&T"
+    AC24.03PilPro: "Co-animation d'une équipe technique"
     AC24.04PilPro: "Proposition de solutions techniques R&T efficientes"
     AC24.05PilPro: "Échanges vulgarisés ou techniques avec tous les acteurs d’un projet"
   PilPro2:
