--- a/yaml/pn/ressources.yml
+++ b/yaml/pn/ressources.yml
@@ -15,7 +15,7 @@ S1:
   R1.14: "Mathématiques des transmissions"
   R1.15: "Gestion de projet"
 S2:
-  R2.01: "Technologie de l'Internet"
+  R2.01: "Technologies de l'Internet"
   R2.02: "Administration système et fondamentaux de la virtualisation"
   R2.03: "Bases des services réseaux"
   R2.04: "Initiation à la téléphonie d'entreprise"
@@ -40,11 +40,11 @@ S3:
   R3.08: "Consolidation de la programmation"
   R3.09: "Programmation événementielle"
   R3.10: "Gestion d'un système de bases de données"
-  R3.11: "Anglais : le monde du travail"
+  R3.11: "Anglais : Le monde du travail"
   R3.12: "Expression-Culture-Communication professionnelle 3"
   R3.13: "PPP : Savoir collaborer"
   R3.14: "Mathématiques : Analyse de Fourier"
-  R3.15: "Méthodes de gestion de projet"
+  R3.15: "Gestion de projet 2 : Utiliser les méthodes de gestion de projet"
   R3.16: "Introduction à l'Internet des Objets"
   R3.17: "Collecte et traitement de données issues de l'IoT"
   R3.18: "Méthodologie du pentesting"
@@ -95,7 +95,7 @@ S5:
   R5.19: "Infrastructures conteneurisées"
   R5.20: "Outils et méthodes du DevOps"
   R5.21: "Programmer son infrastructure"
-  R5.22: "Cloud privé"
+  R5.22: "Solutions Cloud"
   R5.23: "Ingénierie financière de projet"
   R5.24: "Devenir Manager"
   R5.25: "Déploiement d'une solution technique d'aménagement des infrastructures R&T"
