--- a/yaml/pn/saes.yml
+++ b/yaml/pn/saes.yml
@@ -28,7 +28,7 @@ S4:
   SAÉ4.4: "Sécuriser un système d'information"
   SAÉ4.5: "Déployer une infrastructure opérateur et de services clients"
   SAÉ4.6: "Développer et déployer un microservice dans un environnement virtualisé"
-  SAÉ4.7: "Etudier les solutions (système, réseau, sécurité) d'un fournisseur"
+  SAÉ4.7: "Etude de solutions de sécurité de réseaux informatiques pour les besoins d'un client"
 S5:
   SAÉ5.1: "Concevoir, réaliser et présenter une solution technique"
   SAÉ5.2: "Portfolio"
