--- a/yaml/competences/DevCloud.yml
+++ b/yaml/competences/DevCloud.yml
@@ -44,7 +44,7 @@ DevCloud2:
       AC35.01DevCloud: "Adopter les pratiques de pilotage de projet"
       AC35.02DevCloud: "Concevoir, gérer et sécuriser un environnement de microservices"
       AC35.03DevCloud: "Gérer son infrastructure comme du code"
-      AC35.04DevCloud: "Gérer une chaîne d’intégration et/ou de déploiement continu"
+      AC35.04DevCloud: "Gérer une chaîne d'intégration et/ou de déploiement continu"
 
 
 
