--- a/yaml/docx/docx.yml
+++ b/yaml/docx/docx.yml
@@ -83,7 +83,7 @@ S4:
   R4.07: "R407.docx"
   R4.08: "R408.docx"
   R4.09: "R-IOM-410.docx"
-  R4.10: "R-CYBER-415.docx"
+  R4.10: "R-IOM-411.docx"
   R4.11: "R-IOM-412.docx"
   R4.12: "R-CYBER-414.docx"
   R4.13: "R-CYBER-415.docx"
@@ -109,9 +109,9 @@ S5:
   R5.06: "R506.docx"
   R5.07: "R507.docx"
   R5.08: "R508.docx"
-  R5.09: "R-ROM-517.docx"
-  R5.10: "R-ROM-518.docx"
-  R5.11: "R-ROM-519.docx"
+  R5.09: "R-IOM-509.docx"
+  R5.10: "R-IOM-510.docx"
+  R5.11: "R-IOM-511.docx"
   R5.12: "R-CYBER-512.docx"
   R5.13: "R-CYBER-513.docx"
   R5.14: "R-CYBER-514.docx"
