--- a/yaml/pn/ressources.yml
+++ b/yaml/pn/ressources.yml
@@ -41,7 +41,7 @@ S3:
   R3.09: "Programmation événementielle"
   R3.10: "Gestion d'un système de bases de données"
   R3.11: "Anglais : Le monde du travail"
-  R3.12: "Expression-Culture-Communication professionnelle 3"
+  R3.12: "Expression-Culture-Communication professionnelle 3 : Savoir collaborer"
   R3.13: "PPP : Savoir collaborer"
   R3.14: "Mathématiques : Analyse de Fourier"
   R3.15: "Gestion de projet 2 : Utiliser les méthodes de gestion de projet"
@@ -56,19 +56,19 @@ S3:
 S4:
   R4.01: "Infrastructure de sécurité"
   R4.02: "Transmissions avancées"
-  R4.03: "Physique des Télécoms"
+  R4.03: "Physique des télécoms"
   R4.04: "Réseaux cellulaires"
   R4.05: "Automatisation des tâches d'administration"
   R4.06: "Anglais professionnel"
   R4.07: "Expression-Culture-Communication professionnelle 4"
   R4.08: "PPP : monde de l'entreprise"
-  R4.09: "Réseaux sans fil pour l'IoT : MAC et Routage"
+  R4.09: "Réseaux sans fil pour l'IoT : MAC et routage"
   R4.10: "Cryptographie"
   R4.11: "Réseaux sans fil pour l'IoT : couche physique"
   R4.12: "Sécurité des réseaux LAN"
   R4.13: "Sécurisation de services réseaux"
   R4.14: "Outils DevOps"
-  R4.15: "Opérateur de Télécom"
+  R4.15: "Opérateur de télécom"
   R4.16: "Fondamentaux de la conteneurisation"
   R4.17: "Développement de microservices"
   R4.18: "Technologies des réseaux et des télécoms"
@@ -80,7 +80,7 @@ S5:
   R5.04: "Cycle de vie d'un projet informatique"
   R5.05: "Gestion de projets"
   R5.06: "Expression-Culture-Communication professionnelle 5 : s'insérer dans le monde professionnel"
-  R5.07: "Anglais"
+  R5.07: "Anglais : Insertion professionnelle 1"
   R5.08: "PPP"
   R5.09: "Architectures IoT sécurisées"
   R5.10: "Conceptions et études des performances des réseaux IoT"
@@ -100,7 +100,7 @@ S5:
   R5.24: "Devenir Manager"
   R5.25: "Déploiement d'une solution technique d'aménagement des infrastructures R&T"
 S6:
-  R6.01: "Anglais : insertion professionnelle 2"
+  R6.01: "Anglais : Insertion professionnelle 2"
   R6.02: "Expression-Culture-Communication professionnelle 6"
   R6.03: "Droit et réglementation en entreprise"
   R6.04: "Chaines complètes IoT"
